--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -12,11 +12,16 @@
     background-color: rgb(255, 242, 0);
 }
 
-body {
+body html {
     background-color: #f8f9fa;
     color: #333;
     text-align: center;
     padding: 20px;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 /* ✅ Dark Mode */
@@ -488,3 +493,33 @@ body {
         text-align: center;
     }
 }
+
+
+.footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 14px;
+    width: 100%;
+    position: relative;
+    bottom: 0;
+}
+
+/* Footer Links */
+.footer-links {
+    margin-top: 5px;
+}
+
+.footer-links a {
+    color: #ffa500;
+    text-decoration: none;
+    margin: 0 10px;
+    transition: color 0.3s ease-in-out;
+}
+
+.footer-links a:hover {
+    color: #ffcc00;
+}
+
+
